--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^5.1.4",
     "@douyinfe/semi-icons": "^2.60.0",
     "@douyinfe/semi-ui": "^2.31.0",
+    "@supabase/supabase-js": "^2.43.4",
     "clsx": "^1.2.1",
     "next": "^13.4.8",
     "next-intl": "^3.14.1",
