--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "next": "^13.4.8",
     "next-intl": "^3.14.1",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.59.3",
     "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "18.13.0",
-    "@types/react": "18.0.27",
+    "@types/react": "^18.3.3",
     "animated-tailwindcss": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "bufferutil": "^4.0.8",
