--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check": "prettier --check \"**/*.{js,ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@clerk/localizations": "^2.4.4",
     "@clerk/nextjs": "^5.1.4",
     "@douyinfe/semi-icons": "^2.60.0",
     "@douyinfe/semi-icons-lab": "^2.60.0",
