--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@douyinfe/semi-ui": "^2.31.0",
     "@supabase/supabase-js": "^2.43.4",
     "clsx": "^1.2.1",
+    "lucide-react": "^0.395.0",
     "next": "^13.4.8",
     "next-intl": "^3.14.1",
     "next-themes": "^0.2.1",
