--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@douyinfe/semi-icons": "^2.60.0",
     "@douyinfe/semi-icons-lab": "^2.60.0",
     "@douyinfe/semi-ui": "^2.31.0",
+    "@semi-bot/semi-theme-tangerine": "^1.0.0",
     "@supabase/supabase-js": "^2.43.4",
     "clsx": "^1.2.1",
     "lucide-react": "^0.395.0",
@@ -26,6 +27,7 @@
     "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
+    "@douyinfe/semi-next": "^2.60.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "18.13.0",
     "@types/react": "^18.3.3",
