--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "next": "^13.4.8",
     "next-intl": "^3.14.1",
     "next-themes": "^0.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
     "sass": "^1.59.3",
     "tailwind-merge": "^1.10.0"
   },
@@ -30,7 +30,8 @@
     "@douyinfe/semi-next": "^2.60.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "18.13.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "~18.2.0",
+    "@types/react-dom": "~18.2.0",
     "animated-tailwindcss": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "bufferutil": "^4.0.8",
