--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@douyinfe/semi-icons": "^2.60.0",
     "@douyinfe/semi-icons-lab": "^2.60.0",
     "@douyinfe/semi-ui": "^2.31.0",
+    "@likg/match-line": "^1.0.13",
     "@semi-bot/semi-theme-tangerine": "^1.0.0",
     "@supabase/supabase-js": "^2.43.4",
     "clsx": "^1.2.1",
