--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@likg/match-line": "^1.0.13",
     "@semi-bot/semi-theme-tangerine": "^1.0.0",
     "@supabase/supabase-js": "^2.43.4",
+    "axios": "^1.7.2",
     "clsx": "^1.2.1",
     "lucide-react": "^0.395.0",
     "next": "^13.4.8",
