--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.7.2",
     "clsx": "^1.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
     "next": "^13.4.8",
     "next-intl": "^3.14.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@douyinfe/semi-next": "^2.60.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/lodash": "^4.17.5",
     "@types/node": "18.13.0",
     "@types/react": "~18.2.0",
     "@types/react-dom": "~18.2.0",
