--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@likg/match-line": "^1.0.13",
     "@semi-bot/semi-theme-tangerine": "^1.0.0",
     "@supabase/supabase-js": "^2.43.4",
+    "audio-react-recorder": "^1.0.5",
     "axios": "^1.7.2",
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
