--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@douyinfe/semi-icons-lab": "^2.60.0",
     "@douyinfe/semi-ui": "^2.31.0",
     "@likg/match-line": "^1.0.13",
+    "@next/third-parties": "^14.2.5",
     "@semi-bot/semi-theme-tangerine": "^1.0.0",
     "@supabase/supabase-js": "^2.43.4",
     "audio-react-recorder": "^1.0.5",
