--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^5.1.4",
     "@douyinfe/semi-icons": "^2.60.0",
     "@douyinfe/semi-icons-lab": "^2.60.0",
+    "@douyinfe/semi-illustrations": "^2.65.0",
     "@douyinfe/semi-ui": "^2.31.0",
     "@likg/match-line": "^1.0.13",
     "@next/third-parties": "^14.2.5",
@@ -24,10 +25,12 @@
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
+    "nanoid": "^5.0.7",
     "next": "^13.4.8",
     "next-intl": "^3.14.1",
     "next-themes": "^0.2.1",
     "react": "~18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "~18.2.0",
     "sass": "^1.59.3",
     "tailwind-merge": "^1.10.0"
